# paper-uploads

./: .babelrc  .devdata.env  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  package-lock.json  package.json  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox-requirements.txt  tox.ini  webpack.config.js
.github/workflows/: clouidinary-tests.yml  release.yml  tests.yml
.run/: paper-uploads.run.xml
paper_uploads/: __init__.py  admin.py  apps.py  conf.py  exceptions.py  files.py  helpers.py  logging.py  postprocess.py  signals.py  storage.py  tasks.py  tests.py  typing.py  utils.py  validators.py  variations.py
paper_uploads/admin/: __init__.py  base.py  collection.py  file.py  image.py  svg.py
paper_uploads/cloudinary/: __init__.py  admin.py  apps.py  container.py  helpers.py  models.py
paper_uploads/cloudinary/migrations/: 0001_initial.py  0002_auto_20200830_0600.py  0002_auto_20210407_0627.py  0002_cloudinarycollection_cloudinaryfileitem_cloudinaryimagecollection_cloudinaryimageitem_cloudinarymedi.py  0002_cloudinaryimage.py  0003_auto_20191025_0452.py  0003_auto_20200723_0951.py  0003_cloudinarymedia_file.py  0003_delete_cloudinarycollection.py  0004_auto_20191025_0526.py  0004_auto_20200723_1846.py  0004_auto_20211106_1004.py  0004_cloudinaryimage_file.py  0005_auto_20200902_0459.py  0005_auto_20211116_0840.py  0005_cloudinaryfileitem_cloudinaryimagecollection_cloudinaryimageitem.py  0006_auto_20191028_0817.py  0006_auto_20200903_1850.py  0006_rename_basename_cloudinaryfile_resource_name_and_more.py  0007_alter_cloudinaryfile_resource_name_and_more.py  0007_auto_20191028_0834.py  0007_auto_20200907_1226.py  0008_auto_20191028_1232.py  0008_auto_20200907_1227.py  0008_remove_cloudinaryfileitem_created_at_and_more.py
paper_uploads/cloudinary/models/: __init__.py  base.py  collection.py  fields.py  file.py  image.py  media.py  mixins.py
paper_uploads/cloudinary/templatetags/: cloudinary.py  paper_cloudinary.py
paper_uploads/cloudinary/tests/: test_cloudinary_collection.py  test_cloudinary_file.py  test_cloudinary_gallery.py  test_cloudinary_image.py  test_cloudinary_media.py  test_collection.py  test_file.py  test_image.py  test_media.py
paper_uploads/forms/: __init__.py  dialogs.py
paper_uploads/forms/dialogs/: base.py  collection.py  file.py  gallery.py  image.py  svg.py
paper_uploads/forms/fields/: __init__.py  base.py  collection.py  file.py  gallery.py  image.py
paper_uploads/forms/widgets/: __init__.py  base.py  collection.py  file.py  gallery.py  image.py  mixins.py
paper_uploads/management/: conf.py  helpers.py  prompt.py  utils.py
paper_uploads/management/commands/: check_uploads.py  check_variations.py  clean_uploads.py  create_missing_variations.py  recreate_variations.py  remove_empty_collections.py  remove_variations.py
paper_uploads/migrations/: 0001_initial.py  0001_squashed_0009_alter_collectionitembase_polymorphic_ctype_and_more.py  0001_squashed_0018_auto_20190927_0635.py  0002_auto_20190927_1320.py  0002_auto_20190927_1356.py  0002_auto_20200903_1850.py  0002_auto_20210407_0627.py  0002_rename_basename_fileitem_resource_name_and_more.py  0002_uploadedfile_display_name.py  0003_alter_fileitem_resource_name_and_more.py  0003_auto_20190928_1226.py  0003_auto_20200907_1226.py  0003_auto_20210906_1505.py  0003_galleryfileitem_display_name.py  0004_auto_20190930_1042.py  0004_auto_20200907_1227.py  0004_auto_20211106_1004.py  0004_gallerysvgitem_display_name.py  0004_remove_fileitem_created_at_and_more.py  0005_alter_collectionitembase_index_together.py  0005_auto_20190911_1204.py  0005_collection_modified_at.py  0005_remove_collection_cover.py  0006_auto_20190911_1204.py  0006_auto_20191010_1451.py  0006_auto_20211116_0748.py  0006_svgitem_description_svgitem_title.py  0007_alter_collection_options.py  0007_auto_20191011_1052.py  0007_remove_uploadedimage_owner_ct.py  0007_uploadedsvgfile.py  0008_auto_20190911_1215.py  0008_auto_20191017_1027.py  0008_rename_item_type_collectionitembase_type.py  0008_svgitem_height_svgitem_width_uploadedsvgfile_height_and_more.py  0009_alter_collectionitembase_polymorphic_ctype_and_more.py  0009_auto_20190911_1215.py  0009_auto_20191018_0554.py  0009_collection_concrete_collection_content_type_and_more.py  0009_remove_gallery_owner_ct.py  (+25 more)
paper_uploads/models/: __init__.py  base.py  collection.py  file.py  gallery.py  image.py  managers.py  mixins.py  query.py  svg.py  utils.py
paper_uploads/models/containers/: __init__.py  base.py  filefield.py
paper_uploads/models/fields/: __init__.py  base.py  collection.py  file.py  gallery.py  helpers.py  image.py  svg.py
paper_uploads/signals/: __init__.py  classes.py  handlers.py
paper_uploads/templates/paper_uploads/: colection_widget.html  collection_widget.html  file_widget.html  gallery_widget.html  image_widget.html
paper_uploads/templatetags/: filesizeformat.py  json.py
paper_uploads/tests/: test_collection.py  test_file.py  test_gallery.py  test_image.py  test_postprocess.py  test_utils.py  test_variations.py  test_versions.py
paper_uploads/views/: __init__.py  base.py  collection.py  file.py  gallery.py  helpers.py  image.py
tests/: requirements.txt  settings.py  test_fixtures.json  urls.py
tests/app/: admin.py  models.py
tests/app/migrations/: 0001_initial.py  0001_squashed_0028_alter_cloudinaryfileexample_file_size_and_more.py  0002_auto_20190829_1454.py  0002_auto_20190928_1524.py  0002_auto_20200915_0708.py  0002_dummyfileresource.py  (+72 more)
tests/tests/: conftest.py  dummy.py  mixins.py  test_files.py  test_helpers.py  test_permissions.py  test_utils.py  test_validators.py  test_variations.py  utils.py
tests/tests_old/: test_collection.py  test_validators.py
(+209 files in other folders)
